--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,14 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Elm App</title>
+    <title>Julian Zucker's Website</title>
+    <script src="elm.js"></script>
 </head>
 <body>
     <noscript>
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="index.js"></script>
 </body>
 </html>
