--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Julian Zucker's Website</title>
-    <script src="elm.js"></script>
+    <script src="../tmp/elm.js"></script>
 </head>
 <body>
     <noscript>
